    and if the parent table is referenced in the
    WHERE clause, the compiler will call upon
    UPDATE..FROM syntax as allowed by the dialect
    to satisfy the WHERE clause.  MySQL's multi-table
    update feature is also supported if columns
    are specified by object in the "values" dicitionary.
    PG's DELETE..USING is also not available
    in Core yet.

  - [bug] Improvements to joined/subquery eager
    loading dealing with chains of subclass entities
    sharing a common base, with no specific "join depth"
    provided.  Will chain out to
    each subclass mapper individually before detecting
    a "cycle", rather than considering the base class
    to be the source of the "cycle".  [ticket:2481]

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.
    [ticket:2320]

  - [bug] The warning emitted when using
    delete-orphan cascade with one-to-many
    or many-to-many without single-parent=True
    is now an error.  The ORM
    would fail to function subsequent to this
    warning in any case.  [ticket:2405]

  - [bug] Lazy loads emitted within flush events
    such as before_flush(), before_update(),
    etc. will now function as they would
    within non-event code, regarding consideration
    of the PK/FK values used in the lazy-emitted
    query.   Previously,
    special flags would be established that
    would cause lazy loads to load related items
    based on the "previous" value of the
    parent PK/FK values specifically when called
    upon within a flush; the signal to load
    in this way is now localized to where the
    unit of work actually needs to load that
    way.  Note that the UOW does
    sometimes load these collections before
    the before_update() event is called,
    so the usage of "passive_updates" or not